<resources>
    <string name="app_name">Fais-moi un dessin</string>
    <!-- General purpose strings -->
    <string name="send">Envoyer</string>
    <string name="back">Retour</string>
    <string name="bad_request">"Mauvaise requête"</string>
    <string name="not_authorized">"Vous n'êtes pas autorisés à faire cette requête"</string>
    <string name="mandatory_field">"Champ requis"</string>
    <string name= "tutorial">Tutoriel</string>

    <!-- Strings related to login and sign up -->
    <string name="sign_up">Inscription</string>
    <string name="prompt_username">Nom d\'utilisateur*</string>
    <string name="prompt_password">Mot de passe*</string>
    <string name="prompt_firstname">Prénom</string>
    <string name="prompt_lastname">Nom</string>
    <string name="action_sign_in">Connexion</string>
    <string name="welcome">"Bienvenue!"</string>
    <string name="prompt_password_confirm">Confirmer mot de passe</string>
    <string name="invalid_username">Pas un nom d\'utilisateur valide</string>
    <string name="invalid_password">Pas un mot de passe valide</string>
    <string name="login_failed">Le nom d\'utilisateur ou le mot de passe est eronné</string>
    <string name="username_used">Ce nom d\'utilisateur est déjà utilisé</string>
    <string name="password_not_matched">"Les mots de passe ne sont pas identiques"</string>

    <!-- Strings related to game creation -->
    <string name="classic">Classique</string>
    <string name="solo_sprint">Sprint Solo</string>
    <string name="coop_sprint">Sprint Coop</string>
    <string name="difficulty">Difficulté*</string>
    <string name="private_mode">Mode privé</string>

    <!-- Strings related to game searching -->
    <string name="search_game">"Rechercher une partie"</string>
    <string name="join_game">"Rejoindre"</string>
    <string name="available">"Disponible"</string>
    <string name="lobby_full">"Le lobby est déjà plein"</string>

    <!-- Strings related to the lobby -->
    <string name="join_team">Rejoindre l\'équipe</string>
    <string name="start_game">Commencer la partie</string>
    <string name="team1">Équipe 1</string>
    <string name="team2">Équipe 2</string>

    <!-- Strings related to the drawing tools -->
    <string name="pen_size">Grosseur du crayon</string>
    <string name="eraser_size">Grosseur de l\'efface</string>
    <string name="grid_size">Grosseur de la grille</string>
    <string name="transparency">Transparence</string>
    <string name="colorPickerToolTitle">Choisir une couleur</string>


    <!-- Strings related to the game -->
    <string name="guess">Supposition...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings related to the chat -->
    <string name="channel_name_used">Le nom de ce canal est déjà utilisé.</string>
    <string name="title_activity_static_tutorial">StaticTutorial</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="menu_game_description">
        Création de partie: Les boutons permettent de d\'ouvrir l\'interface de création de game. \n
        Rejoindre partie privée : Inscrire le code secret partagé dans un canal de discussion et
        rejoindre une partie privé en cliquant sur la flèche. \n
        Rejoindre une partie publique: Déployer le panneau pour voir une partie publique et rejoindre
        la partie publique.
    </string>
    <string name="parametre_game_description">
        Pour créer une partie,
        il suffit de remplir les champs demandés.
        Il faut d’abord nommer la partie, puis choisir si on désire la mettre privée ou
        publique et ensuite choisir la difficulté. Une fois tous les champs remplis, il est possible
        d\’appuyer sur le bouton \“Créer\” pour créer la partie.
    </string>
    <string name="lobby_description">
Une fois dans la salle d\’attente d’une partie, il est possible de voir les autres joueurs qui attendent et d\'ajouter ou retirer des joueurs virtuels. Une fois que le nombre de joueurs requis est atteint, il est possible de commencer la partie en appuyant sur le bouton en bas de la page.
        Il est possible de quitter la salle d’attente à tout moment en appuyant sur le bouton en haut à gauche.
    </string>
    <string name="guess_classic_description">
La partie classique est composée de deux équipes qui dessinent à tour de rôle.
        Le but est de deviner le plus de dessins possible pour gagner des points.
        La boîte de suggestion permet de faire des suggestions. Le bouton indice permet de demander des indices.
    </string>
    <string name="draw_classic_description">
Dans les parties classiques, il est possible de dessiner sur la surface de dessin.
        Une boîte d’outils est disponible avec les outils suivants: Grille, crayon, efface et annuler-refaire.
        La palette de couleur permet de choisir des couleurs pré-sélectionnées
        ou bien une couleur personnalisée en cliquant sur le bouton de la couleur primaire.
    </string>

    <string name="guess_coop_description">
En sprint coop et sprint solo, il faut travailler en équipe pour deviner le plus de mots possible avant la fin de la partie.
        Pour chaque dessin deviné correctement, vous gagnez des points et du temps supplémentaire.
        La partie se termine lorsque le temps alloué à la partie est terminée, mais vous avez aussi un temps maximal pour deviner un dessin. Comme dans le mode classique,
        la boîte de supposition permet d\'essayer de deviner le mot et il y a un bouton qui permet de demander des indices.

    </string>

    <string name = "menu_game_title">Rejoindre une partie </string>
    <string name = "parametre_game_title">Paramètre de création de partie </string>
    <string name = "lobby_title">Salle d\'attente </string>
    <string name = "guess_classic_title">Deviner en mode classique </string>
    <string name="draw_classic_title">Dessiner en mode classique</string>
    <string name= "guess_coop_title">Deviner en mode coop et solo </string>

    <string name="temps_restant">Temps restant:</string>
    <string name="_60">60</string>


</resources>