<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_grey"
    tools:context=".view.mainmenu.GameCreationFragment">
    <Button
        android:id="@+id/game_search"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="20dp"
        android:enabled="true"
        android:text="@string/search_game"
        android:textStyle="bold"
        android:background="@drawable/button_rounded"
        android:theme="@style/Widget.App.Button.Red"
        android:textAllCaps="false"
        android:gravity="left|center_vertical"
        android:paddingLeft="30dp"/>
    <Button
        android:id="@+id/classic"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="10dp"
        android:enabled="true"
        android:text="@string/classic"
        android:textStyle="bold"
        android:background="@drawable/button_rounded"
        android:drawableRight="@drawable/icon_classic"
        android:theme="@style/Widget.App.Button.Blue"
        android:textAllCaps="false"
        android:gravity="left|center_vertical"
        android:paddingLeft="30dp"/>

    <Button
        android:id="@+id/solo_sprint"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="10dp"
        android:enabled="true"
        android:text="@string/solo_sprint"
        android:textStyle="bold"
        android:background="@drawable/button_rounded"
        android:drawableRight="@drawable/icon_solo"
        android:theme="@style/Widget.App.Button.Green"
        android:textAllCaps="false"
        android:gravity="left|center_vertical"
        android:paddingLeft="30dp"/>

    <Button
        android:id="@+id/coop_sprint"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginStart="30dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="20dp"
        android:enabled="true"
        android:text="@string/coop_sprint"
        android:textStyle="bold"
        android:background="@drawable/button_rounded"
        android:drawableRight="@drawable/icon_solo"
        android:theme="@style/Widget.App.Button.Orange"
        android:textAllCaps="false"
        android:gravity="left|center_vertical"
        android:paddingLeft="30dp"/>

</LinearLayout>

