<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".view.connection.login.LoginActivity">

    <TextView
        android:id="@+id/connexion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Connexion"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/username"
        android:maxLength="126"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_username"
        android:hint="@string/prompt_username"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:layout_below="@+id/connexion"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginStart="24dp"
        android:layout_marginTop="82dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="440dp"
        android:enabled="false"
        android:text="@string/action_sign_in"
        app:rippleColor="#FFFFFF" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_gravity="center"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/container2"
        android:layout_width="288dp"
        android:layout_height="47dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="Vous n'avez pas de compte?"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="256dp" />

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/no_account"
            android:layout_toRightOf="@+id/no_account"
            android:text="Créer un compte"
            android:textColor="@color/purple_700" />
    </LinearLayout>
</RelativeLayout>